--- a/src/home.html
+++ b/src/home.html
@@ -6,19 +6,19 @@
     <br>
     <div class="main-image">
         <!--big main image-->
-        <img src="./images/main_image_cupcakes.jpg" alt="main-image">
+        <img src="images/main_image_cupcakes.jpg" alt="main-image">
     </div><!--main-image-->
     <br>
     <br>
     <br>
     <div id="home-tiles" class="row justify-content-center">
         <div class="col-md-4 col-sm-6 col-xs-12" id="menu"> 
-            <a ui-sref="menu"><img src="./images/menu.jpg" alt="menu"></a>
+            <a ui-sref="menu"><img src="images/menu.jpg" alt="menu"></a>
             <h3>Menu</h3>
               
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12" id="about"> 
-            <a ui-sref="about"><img src="./images/about.jpg" alt="about"></a>  
+            <a ui-sref="about"><img src="images/about.jpg" alt="about"></a>  
             <h3>About</h3>
         </div>
 
