fixing home images

--- a/src/home.html
+++ b/src/home.html
@@ -13,12 +13,12 @@
     <br>
     <div id="home-tiles" class="row justify-content-center">
         <div class="col-md-4 col-sm-6 col-xs-12" id="menu"> 
-            <a ui-sref="menu"><img src="images/menu.jpg" alt="menu"></a>
+            <a ui-sref="menu"><img src="images/menu.JPG" alt="menu"></a>
             <h3>Menu</h3>
               
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12" id="about"> 
-            <a ui-sref="about"><img src="images/about.jpg" alt="about"></a>  
+            <a ui-sref="about"><img src="images/about.JPG" alt="about"></a>  
             <h3>About</h3>
         </div>
 
