fixing menu scroller images

--- a/src/menu.html
+++ b/src/menu.html
@@ -4,10 +4,10 @@
     
 
         <ul>
-            <li><img src="../images/scroller/wreath.jpg" width="400" height="400" alt="title"/></li>
-            <li><img src="../images/scroller/cactus.jpg" width="400" height="400" alt="title"/></li>
-            <li><img src="../images/scroller/unicorn.jpg" width="400" height="400" alt="title"/></li>
-            <li><img src="../images/scroller/llamma.jpg" width="400" height="400" alt="title"/></li>
+            <li><img src="images/scroller/wreath.jpg" width="400" height="400" alt="wreath"/></li>
+            <li><img src="images/scroller/cactus.jpg" width="400" height="400" alt="cactus"/></li>
+            <li><img src="images/scroller/unicorn.jpg" width="400" height="400" alt="unicorn"/></li>
+            <li><img src="images/scroller/llamma.jpg" width="400" height="400" alt="llamma"/></li>
             
         </ul>
         <div style="clear: both"></div>
