took them out of scroller folder

--- a/src/menu.html
+++ b/src/menu.html
@@ -5,9 +5,9 @@
 
         <ul>
             <li><img src="images/scroller/wreath.JPG" width="400" height="400" alt="wreath"/></li>
-            <li><img src="images/scroller/cactus.JPG" width="400" height="400" alt="cactus"/></li>
+            <li><img src="images/cactus.JPG" width="400" height="400" alt="cactus"/></li>
             <li><img src="images/scroller/unicorn.JPG" width="400" height="400" alt="unicorn"/></li>
-            <li><img src="images/scroller/llamma.JPG" width="400" height="400" alt="llamma"/></li>
+            <li><img src="images/llamma.JPG" width="400" height="400" alt="llamma"/></li>
             
         </ul>
         <div style="clear: both"></div>
