--- a/src/menu.html
+++ b/src/menu.html
@@ -4,7 +4,7 @@
     
 
         <ul>
-            <li><img src="images/scroller/wreath.JPG" width="400" height="400" alt="wreath"/></li>
+            <li><img src="images/scroller/wreath.jpg" width="400" height="400" alt="wreath"/></li>
             <li><img src="images/scroller/cactus.JPG" width="400" height="400" alt="cactus"/></li>
             <li><img src="images/scroller/unicorn.JPG" width="400" height="400" alt="unicorn"/></li>
             <li><img src="images/scroller/llamma.JPG" width="400" height="400" alt="llamma"/></li>
